ViewCells and TemplateSelectors

--- a/Bot/Bot.csproj
+++ b/Bot/Bot.csproj
@@ -24,5 +24,6 @@
     <Folder Include="Configuration\" />
     <Folder Include="ViewModel\" />
     <Folder Include="ViewModel\Helpers\" />
+    <Folder Include="View\UserControls\" />
   </ItemGroup>
 </Project>
